--- a/app/src/main/res/layout/info_task_dialog.xml
+++ b/app/src/main/res/layout/info_task_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/info"
         android:textColor="#234E70"
-        android:textSize="25sp"
+        android:textSize="30dp"
         android:textStyle="bold" />
 
 
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:textColor="#234E70"
             android:text="@string/info"
             android:textSize="20sp" />
     </LinearLayout>
@@ -58,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:textColor="#234E70"
             android:text="@string/info"
             android:textSize="20sp" />
     </LinearLayout>
@@ -81,6 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:textColor="#234E70"
             android:text="@string/info"
             android:textSize="20sp" />
     </LinearLayout>
