--- a/app/src/main/res/layout/medicationlayout.xml
+++ b/app/src/main/res/layout/medicationlayout.xml
@@ -53,13 +53,13 @@
                 app:layout_constraintStart_toStartOf="@+id/medDosage"
                 app:layout_constraintTop_toBottomOf="@+id/medDosage" />
 
-            <TextView
+            <Button
                 android:id="@+id/instruction"
                 android:layout_width="150dp"
-                android:layout_height="28dp"
-                android:background="@color/Sage"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/Sage"
                 android:text="@string/press_to_edit_delete"
-                android:textColor="@color/black"
+                android:textColor="#234E70"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
