<UI/UX fix 2.9.0>

--- a/app/src/main/res/layout/activity_adhd_result.xml
+++ b/app/src/main/res/layout/activity_adhd_result.xml
@@ -30,7 +30,7 @@
         android:gravity="center"
         android:text="adhdResult"
         android:textAllCaps="false"
-        android:textColor="#3F51B5"
+        android:textColor="#234E70"
         android:textColorHighlight="#3F51B5"
         android:textColorHint="#3F51B5"
         android:textColorLink="#3F51B5"
