--- a/app/src/main/res/layout/activity_anxiety.xml
+++ b/app/src/main/res/layout/activity_anxiety.xml
@@ -53,19 +53,19 @@
             />
 
         <Button
-            android:gravity="center"
-            android:orientation="vertical"
             android:id="@+id/choice1"
+            android:gravity="center"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="44dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
+            android:orientation="vertical"
             android:text="not_at_all_sure"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -77,13 +77,13 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="44dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:text="Several_days"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -96,12 +96,12 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="44dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -115,12 +115,12 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="44dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
