--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cff7d3"
+    android:background="@color/Hex"
     tools:context=".ui.doctor.DoctorActivity">
 
         <RelativeLayout
@@ -21,7 +21,6 @@
                     android:paddingBottom="40dp"
                     android:background="@color/white"
                     >
-
 
                 </ListView>
 
@@ -49,7 +48,7 @@
                     android:fontFamily="@font/roboto_bold"
                     android:text="No Appointments"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#234E70"
                     android:textSize="30sp" />
 
                 <TextView
@@ -62,7 +61,7 @@
                     android:layout_marginTop="85dp"
                     android:fontFamily="@font/roboto_bold"
                     android:text="Your Appointments"
-                    android:textColor="@color/white"
+                    android:textColor="#234E70"
                     android:textSize="35sp"
                     app:layout_constraintBottom_toTopOf="@+id/doctor_listview"
                     app:layout_constraintStart_toStartOf="@+id/doctor_listview" />
