--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -12,12 +12,12 @@
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="@color/YellowAeroSpace"
-        android:fontFamily="@font/roboto_bold"
+        android:textStyle="bold"
         android:paddingStart="10dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
         android:text="@string/add_lab_test"
-        android:textColor="@color/teal_700"
+        android:textColor="#234E70"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
         android:text="ADD"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
