--- a/app/src/main/res/layout/activity_meditate.xml
+++ b/app/src/main/res/layout/activity_meditate.xml
@@ -32,7 +32,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginBottom="115dp"
         android:text="@string/set"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:backgroundTint="@color/RobbinsEggBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
         android:text="@string/start"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:backgroundTint="@color/Bluebell"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
         android:text="@string/reset"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         android:visibility="invisible"
         app:backgroundTint="@color/Raspberry"
         app:layout_constraintBottom_toBottomOf="parent"
