--- a/app/src/main/res/layout/activity_time_change.xml
+++ b/app/src/main/res/layout/activity_time_change.xml
@@ -16,6 +16,7 @@
         android:text="@string/update_times"
         android:textColor="#234E70"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +30,7 @@
         android:text="@string/afternoon"
         app:layout_constraintBottom_toTopOf="@+id/afternoon_edit_time"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="#234E70"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -38,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/night"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toTopOf="@+id/night_edit_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -49,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="79dp"
         android:text="00:00"
+        android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +65,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/morning"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="#234E70"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -72,6 +77,7 @@
         android:layout_marginTop="24dp"
         android:text="00:00"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="#234E70"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -81,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
+        android:textColor="#234E70"
         android:text="00:00"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
