--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,4 +6,15 @@
     android:background="#E7E8D1"
     tools:context=".ui.about.About_us">
 
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="408dp"
+        android:layout_height="223dp"
+        android:layout_gravity="center_horizontal"
+        android:clickable="false"
+        android:src="@drawable/vozyk_3"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="542dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
