--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -44,6 +44,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#234E70"
             android:text="@string/touch_profile_picture_to_change"
             android:layout_gravity="center_horizontal"/>
         <LinearLayout
@@ -93,9 +94,10 @@
                 android:background="@drawable/settings_"
                 android:scaleType="centerCrop" />
 
-            <TextView
-                android:layout_width="70dp"
+            <Button
+                android:layout_width="110dp"
                 android:layout_height="42dp"
+                android:textColor="#234E70"
                 android:text="@string/settings"
                 android:gravity="center"
                 app:layout_constraintTop_toBottomOf="@+id/settings" />
