--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -64,7 +64,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -83,7 +83,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -102,7 +102,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -121,7 +121,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -140,7 +140,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
             android:textAllCaps="false"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
