--- a/app/src/main/res/layout/activity_breathing.xml
+++ b/app/src/main/res/layout/activity_breathing.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:text="@string/breathing_exercise"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:textColor="#234E70"
             android:textSize="30sp" />
 
@@ -61,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
+                    android:textColor="#234E70"
                     android:text="@string/i_want_to_inhale_for"
                     android:textSize="24sp" />
 
@@ -92,6 +94,7 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
+                        android:textColor="#234E70"
                         android:text="@string/seconds"
                         android:textSize="20sp" />
 
@@ -104,6 +107,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text="@string/i_want_to_hold_for"
+                    android:textColor="#234E70"
                     android:textSize="24sp" />
 
                 <LinearLayout
@@ -134,6 +138,7 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
+                        android:textColor="#234E70"
                         android:text="@string/seconds"
                         android:textSize="20sp" />
 
@@ -146,6 +151,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text="@string/i_want_to_exhale_for"
+                    android:textColor="#234E70"
                     android:textSize="24sp" />
 
                 <LinearLayout
@@ -176,6 +182,7 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
+                        android:textColor="#234E70"
                         android:text="@string/seconds"
                         android:textSize="20sp" />
 
@@ -188,6 +195,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text="@string/for_for"
+                    android:textColor="#234E70"
                     android:textSize="24sp" />
 
                 <LinearLayout
@@ -218,6 +226,7 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
+                        android:textColor="#234E70"
                         android:text="@string/cycles"
                         android:textSize="20sp" />
 
@@ -232,7 +241,7 @@
                     android:layout_marginTop="10dp"
                     android:backgroundTint="@color/Raspberry"
                     android:text="@string/start"
-                    android:textColor="@color/white"
+                    android:textColor="#234E70"
                     android:textColorHint="#664564"
                     android:textColorLink="#664564"
                     android:textSize="24sp"
