--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="56dp"
         android:layout_marginBottom="488dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -36,6 +37,7 @@
         android:layout_marginEnd="57dp"
         android:layout_marginBottom="404dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="New Email"
         android:inputType="textEmailAddress"
@@ -55,6 +57,7 @@
         android:layout_marginEnd="57dp"
         android:layout_marginBottom="337dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -74,7 +77,7 @@
         android:layout_marginEnd="91dp"
         android:layout_marginBottom="267dp"
         android:text="Save"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
