--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="500dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -37,6 +38,7 @@
         android:layout_marginEnd="83dp"
         android:layout_marginBottom="419dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Current password"
         android:inputType="textPassword"
@@ -56,6 +58,7 @@
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="339dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="New Password"
         android:inputType="textPassword"
@@ -76,6 +79,7 @@
         android:layout_marginEnd="84dp"
         android:layout_marginBottom="268dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Repeat Password"
         android:inputType="textPassword"
@@ -95,6 +99,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:text="Save"
+        android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
