--- a/app/src/main/res/layout/activity_delete_acount.xml
+++ b/app/src/main/res/layout/activity_delete_acount.xml
@@ -19,6 +19,7 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="472dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -38,6 +39,7 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="392dp"
         android:autofillHints=""
+        android:textColor="#234E70"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -57,7 +59,7 @@
         android:layout_marginEnd="16dp"
         android:text="Submit Here"
         android:textSize="13sp"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
