--- a/app/src/main/res/layout/activity_doctor_add.xml
+++ b/app/src/main/res/layout/activity_doctor_add.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:hint="Reason"
+        android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/doctor_name">
 
@@ -53,6 +54,7 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="32dp"
         android:hint="Doctor's Name"
+        android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
@@ -120,7 +122,7 @@
         android:text="ADD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
