--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:textColor="#234E70"
         android:hint="@string/medicine_name"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:textColor="#234E70"
         android:hint="@string/note_optional"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,11 +57,13 @@
             android:id="@+id/radio_button_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="#234E70"
             android:text="@string/before_food" />
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="#234E70"
             android:text="@string/after_food" />
 
     </RadioGroup>
@@ -80,6 +84,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#234E70"
             android:width="150dp"
             android:text="@string/morning" />
 
@@ -88,6 +93,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#234E70"
             android:width="150dp"
             android:text="@string/afternoon" />
 
@@ -112,6 +118,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#234E70"
             android:width="150dp"
             android:text="@string/night" />
 
@@ -121,6 +128,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#234E70"
             android:width="150dp"
             android:text="@string/custom" />
 
@@ -135,6 +143,7 @@
         android:layout_marginEnd="17dp"
         android:backgroundTint="@color/Bluebell"
         android:text="@string/add_medicine"
+        android:textColor="#234E70"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
         app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
         app:layout_constraintStart_toStartOf="parent" />
@@ -147,6 +156,7 @@
         android:layout_marginBottom="203dp"
         android:text="@string/cancel"
         android:backgroundTint="@color/Raspberry"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/submitbtn"
@@ -162,6 +172,7 @@
         android:paddingBottom="10dp"
         android:text="@string/add_medicine"
         android:textColor="#234E70"
+        android:textStyle="bold"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
