--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,6 +95,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/Bluebell"
         android:text="@string/login"
+        android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
