--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -35,6 +35,7 @@
                 android:maxLength="36"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
+                android:textColor="#234E70"
                 android:textCursorDrawable="@null"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -56,6 +57,7 @@
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
                 android:backgroundTint="@color/Hex"
+                android:textColor="#234E70"
                 android:textCursorDrawable="@null"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title"
