--- a/app/src/main/res/layout/activity_ocd.xml
+++ b/app/src/main/res/layout/activity_ocd.xml
@@ -63,7 +63,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -82,7 +82,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -101,7 +101,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -120,7 +120,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -139,7 +139,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
