--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_marginHorizontal="30dp"
             android:layout_height="50dp"
+            android:textColor="#234E70"
             android:backgroundTint="@color/Bluebell"
             android:text="+"
             android:textSize="25sp"/>
@@ -56,9 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/RobbinsEggBlue"
-                android:text="@string/my_completed_tasks"
-                android:textColor="@color/white">
-
+                android:textColor="#234E70"
+                android:text="@string/my_completed_tasks">
             </Button>
 
             <Button
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/RobbinsEggBlue"
                 android:text="@string/my_pending_tasks"
-                android:textColor="@color/white"
+                android:textColor="#234E70"
                 style="?android:attr/buttonBarButtonStyle">
 
             </Button>
@@ -92,6 +92,7 @@
         android:layout_height="40sp"
         android:layout_gravity="center"
         android:backgroundTint="@color/Sage"
+        android:textColor="#234E70"
         android:textSize="18sp"
         android:layout_marginTop="-40dp"
         android:layout_marginRight="15dp"
