--- a/app/src/main/res/layout/fragment_meds.xml
+++ b/app/src/main/res/layout/fragment_meds.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cff7d3"
+    android:background="@color/Hex"
     tools:context=".ui.meds.MedsPills">
 
     <RelativeLayout
@@ -43,7 +43,7 @@
             android:layout_marginTop="600dp"
             android:text="@string/no_medicines"
             android:fontFamily="@font/roboto_bold"
-            android:textColor="@color/black"
+            android:textColor="#234E70"
             android:textSize="30sp" />
         <TextView
             android:id="@+id/textView2"
@@ -55,7 +55,7 @@
             android:layout_marginTop="85dp"
             android:fontFamily="@font/roboto_bold"
             android:text="@string/your_medicines"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textSize="35sp"
             app:layout_constraintBottom_toTopOf="@+id/listview"
             app:layout_constraintStart_toStartOf="@+id/listview" />
